course5/api/ingress.haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openfaas-ingress2
  namespace: openfaas
  annotations:
    ingress.class: haproxy
  labels:
    app: openfaas
spec:
  ingressClassName: haproxy
  rules:
    - http:
        paths: 
          - backend:
              service:
                name: gateway-external
                port:
                  number: 8080
            path: /
            pathType: Prefix
