course5/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openfaas-ingress
  namespace: openfaas
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: openfaas
spec:
  ingressClassName: alb
  rules:
    - http:
        paths: 
          - backend:
              service:
                name: gateway-external
                port:
                  number: 8080
            path: /
            pathType: Prefix
